experimental ksqlDB UDF (#4)
* draft support with many dragons for ksqldb UDF

* add logging and a few minor other changes

* adapt pom for logging purposes

* make all struct related fields optional as required by ksqldb

* add README for ksqlDB UDFs

* package renaming

* test package renaming

* pre-register commonly found classes in backwards compatible order while keeping registration required false for now

* bump some dependencies and add kryo community serializers

* adapt readme to reflect splitting of documentation into separate modules

* adapt readme (draft) due to splitting docs into modules

* version bump and fix

* logback version bump and renaming induced deletion

* fixed mvn dependency scopes

* move serde processor package to kryptonite and update all poms accordingly

* update documentation with pre-built download links

* fix error in configuration settings overiew table

* upgrade jackson + logback dependencies

* dependency upgrades in all modules

* minor doc updates

* maintenance updates as follows

- allow field mode to be specified separately per field
- dependency updates across all modules

* fix udfs description/version info

* update READMEs